--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ categories = ["accessibility"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clearscreen = "2.0.1"
 nanoserde = "0.1.35"
