Install libclang-dev in CI.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,6 +17,9 @@ Linux_task:
   container:
     image: rust:1.73
   install_script:
+    - apt update
+    - apt install libclang-dev
+  cargo_build_script:
     - cargo test --no-run
   script:
     - cargo test
