--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ tts = "0.25.6"
 
 [lib]
 #name = "main"
-crate_type = ["lib", "cdylib"]
+crate_type = ["cdylib", "rlib"]
 
 # This dependency will only be included when not targeting Android
 [target.'cfg(not(target_os = "android"))'.dependencies]
