It helps to unzip the correct file.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -67,5 +67,5 @@ publish_task:
     - npm install --unsafe-perm=true -g netlify-cli
   script:
     - wget https://api.cirrus-ci.com/v1/artifact/build/${CIRRUS_BUILD_ID}/site.zip
-    - unzip _site.zip
+    - unzip site.zip
     - netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --dir=_site --prod
