--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ eframe = { version = "0.23.0", default-features = false, features = [
 nanoserde = "0.1.35"
 tts = "0.25.6"
 log = "0.4.21"
+pico-args = "0.5.0"
 
 # non-web:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
