--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,11 +6,11 @@ task:
   registry_cache:
     folder: $CARGO_HOME/registry
     fingerprint_script: cat Cargo.lock
-  target_cache:
-    folder: target
-    fingerprint_script:
-      - rustc --version
-      - cat Cargo.lock
+  #target_cache:
+  #  folder: target
+  #  fingerprint_script:
+  #    - rustc --version
+  #    - cat Cargo.lock
   before_cache_script: rm -rf $CARGO_HOME/registry/index
   # Common install script.
   install_script:
